[gd_scene load_steps=6 format=3 uid="uid://cvlgd4bduojv4"]

[ext_resource type="Script" uid="uid://c8uv851vxx5cb" path="res://Scripts/ui.gd" id="1_2246s"]
[ext_resource type="Texture2D" uid="uid://cly18lwpsc1oa" path="res://Assets/icons/clock-icon.png" id="4_2246s"]
[ext_resource type="FontFile" uid="uid://c2o1ypo5rdbyl" path="res://Fonts/leviwindows/Windows Regular.ttf" id="5_m78vo"]
[ext_resource type="PackedScene" uid="uid://cbsbd5h2w4gq5" path="res://Scenes/ConfigWindowtest.tscn" id="5_q7pk6"]

[sub_resource type="LabelSettings" id="LabelSettings_smcll"]
line_spacing = 3.175
font = ExtResource("5_m78vo")
font_size = 30

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2246s")
config_window = ExtResource("5_q7pk6")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.501961, 0.498039, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 37.0
offset_right = 162.0
offset_bottom = 324.0
scale = Vector2(0.545, 0.545)
theme_override_constants/v_separation = 45

[node name="icon_pomodoro" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="pomodoro_app" type="TextureButton" parent="GridContainer/icon_pomodoro"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_2246s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="GridContainer/icon_pomodoro"]
layout_mode = 2
text = "Pomodoro Timer"
label_settings = SubResource("LabelSettings_smcll")
horizontal_alignment = 1

[node name="icon_settings" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="settings_app" type="TextureButton" parent="GridContainer/icon_settings"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_2246s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="GridContainer/icon_settings"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_smcll")
horizontal_alignment = 1

[node name="icon_credits" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5

[node name="credits_image" type="TextureButton" parent="GridContainer/icon_credits"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_2246s")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="GridContainer/icon_credits"]
layout_mode = 2
text = "credits.png"
label_settings = SubResource("LabelSettings_smcll")
horizontal_alignment = 1

[connection signal="button_up" from="GridContainer/icon_settings/settings_app" to="." method="_on_settings_app_button_up"]
